<resources>
    <string name="app_name">My Application</string>
    <string name="about">Ilya has been working in IT since 2012. at the moment he is the chief IT specialist in eurowine. He is engaged in automation of processes and introduction of new technologies.</string>
    <string name="itspec">It Specialist</string>
    <string name="andrstud">Android student</string>
    <string name="phpdev">Php developer</string>
    <string name="send_msg">Send message</string>
    <string name="email_to_me">markell0308@mail.ru</string>
    <string name="email_subject">Message from App</string>
    <string name="str">markell0308@mail.ru</string>
    <string name="about_menu">About</string>
</resources>
