<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="photo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/photo" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="@dimen/margin8dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/size28dp"
            android:layout_height="@dimen/size28dp"
            android:layout_marginTop="@dimen/margin8dp"
            app:srcCompat="@mipmap/ewlogo" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text16sp"
            android:layout_marginTop="@dimen/margin8dp"
            android:layout_marginStart="@dimen/margin8dp"
            android:text="@string/itspec" />
</LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/size28dp"
                android:layout_height="@dimen/size28dp"

                android:layout_marginTop="@dimen/margin8dp"
                app:srcCompat="@mipmap/andrlogo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin8dp"
            android:text="@string/andrstud"
            android:textSize="@dimen/text16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/size28dp"
            android:layout_height="@dimen/size28dp"
            android:layout_marginTop="@dimen/margin8dp"
            app:srcCompat="@mipmap/php" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin8dp"
            android:text="@string/phpdev"
            android:textSize="@dimen/text16sp" />
    </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin8dp"

            android:layout_marginBottom="@dimen/margin8dp"
            android:background="@android:color/holo_red_dark"
            android:visibility="visible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text16sp"
        android:layout_marginTop="@dimen/margin8dp"
        android:layout_marginBottom="@dimen/margin8dp"
        android:text="@string/about" />
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin8dp"
            android:layout_marginBottom="@dimen/margin8dp"
            android:background="@android:color/holo_red_dark"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin8dp"
            android:layout_marginBottom="@dimen/margin8dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin8dp"
            android:layout_marginBottom="@dimen/margin8dp"
            android:layout_gravity="end"
            android:text="@string/send_msg" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>